src/test/resources/extension/valid/generics/longTypeVarName.awsl
begin

newtype X<IAmAVeryLongTypeVariableNameHohohohahaha> is
    IAmAVeryLongTypeVariableNameHohohohahaha hahaha;
end

X<int> x = X(100);
println x.hahaha;

end